---
source: compiler-core/src/erlang/tests/case.rs
assertion_line: 54
expression: "\npub fn main(x) {\n  case x {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars]).

-export([main/1]).

-spec main(integer()) -> integer().
main(X) ->
    case X of
        0 ->
            1;

        _ ->
            2
    end.

